@@ -6637,17 +6637,16 @@ ix86_delegitimize_address (rtx orig_x)
       return x;
     }
 
-  /* APPLE LOCAL begin radar 4168635 */
+  /* APPLE LOCAL begin mainline 4.2 2006-02-07 4430041 */
   if (TARGET_MACHO && darwin_local_data_pic (x)
-      && GET_CODE (XEXP (x, 0)) == SYMBOL_REF
-      && CONSTANT_POOL_ADDRESS_P (XEXP (x, 0))
       && GET_CODE (orig_x) != MEM)
     {
+      x = XEXP (x, 0);
       if (y)
-        return orig_x;
-      return XEXP (x, 0);
+	return gen_rtx_PLUS (Pmode, y, x);
+      return x;
     }
-  /* APPLE LOCAL end radar 4168635 */
+  /* APPLE LOCAL end mainline 4.2 2006-02-07 4430041 */
 
   return orig_x;
 }
