@@ -1,3 +1,9 @@
+2006-02-07  Geoffrey Keating  <geoffk@apple.com>
+
+	Radar 4430041
+	* config/i386/i386.c (ix86_delegitimize_address): Support Darwin
+	PIC addresses.
+
 2006-01-06  Eric Christopher  <echristo@apple.com>
 
         * doc/tm.texi (TARGET_ASM_EMIT_EXCEPT_TABLE_LABEL): Document.
